--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="mob-dropdown-container">
-          <a href="#">CURRENT ISSUE</a>
-          <a href="#">PAST ISSUE</a>
+          <a href="current.html">CURRENT ISSUE</a>
+          <a href="past.html>PAST ISSUE</a>
         </div>
         
         <a href="contact.html">CONTACT</a>
@@ -77,17 +77,17 @@
         <div class="items">
           <img class="item-pic" src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1724334998/loc_xgalri.jpg">
           <hr>
-          <p class="int">International Research Journal of Modernization in Engineering Technology & Science, Indus Satellite Green, , AB Road, Indore (Madhya Pradesh)</p>
+          <p class="int">Rajamundry,AP,India</p>
         </div>
         <div class="items">
           <img class="item-pic" src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1724335248/mess_rttuud.jpg">
           <hr>
-          <p class="int">editor@irjmets.com</p>
+          <p class="int">example@gmail.com</p>
         </div>
         <div class="items">
           <img class="item-pic" src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1724335010/contact_chjyyr.jpg">
           <hr>
-          <p class="int">+91 786-969-67-94 , +91 786-986-27-10 (Whatsapp or SMS on this numbers)</p>
+          <p class="int">+917815942271 (Whatsapp or SMS on this numbers)</p>
         </div>
        
       </div>
@@ -145,7 +145,7 @@
       <h1 class="mob-fourth-box-head">PUBLICATIONS</h1>
       </div>
       <div class="third-box">
-     <a href="#" style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
+     <a href="currenthtml style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
       <a href="past.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">PAST ISSUE</p></a>
       </div>
       <div class="fourth-box">
@@ -264,8 +264,8 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content2" id="myDropdown2">
-              <a href="#">CURRET ISSUE</a>
-              <a href="#">PAST ISSUE</a>
+              <a href="currenthtml">CURRENT ISSUE</a>
+              <a href="past.html">PAST ISSUE</a>
    
             </div>
             </div> 
@@ -284,11 +284,11 @@
  For Authors</h1>
 </div>
 <div class="box3">
-<a href="#"><p class="box3-para">Call for Paper</p></a>
+<a href="call.html"><p class="box3-para">Call for Paper</p></a>
 <a href="process.html"><p class="box3-para">Publication Process</p></a>
 <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
 <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-<a href="#"><p class="box3-para">Paper Format</p></a>
+<a href="sample.html"><p class="box3-para">Paper Format</p></a>
 
 <a href="track1.html"><p class="box3-para">Track paper</p></a>
 <a href="indexing.html"><p class="box3-para">Indexing</p></a>
@@ -302,7 +302,7 @@ Publication</h1>
 </div>
   <div class="box4">
 <a href="current.html"><p class="box3-para">Current issue</p></a>
-<a href="#"><p class="box3-para">past issue</p></a>
+<a href="past.html"><p class="box3-para">past issue</p></a>
 
  
 </div>
@@ -330,12 +330,12 @@ Publication</h1>
       <div class="items">
         <img class="item-pic" src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1724334998/loc_xgalri.jpg">
         <hr>
-        <p class="int">International Research Journal of Modernization in Engineering Technology & Science, Indus Satellite Green, , AB Road, Indore (Madhya Pradesh)</p>
+        <p class="int">Rajahmundry,AP,India</p>
       </div>
       <div class="items">
         <img class="item-pic" src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1724335248/mess_rttuud.jpg">
         <hr>
-        <p class="int">editor@irjmets.com</p>
+        <p class="int">example@gmial.com</p>
       </div>
       <div class="items">
         <img class="item-pic" src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1724335010/contact_chjyyr.jpg">
