--- a/editor.html
+++ b/editor.html
@@ -103,7 +103,7 @@
       <h1 class="mob-fourth-box-head">PUBLICATIONS</h1>
       </div>
       <div class="third-box">
-     <a href="#" style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
+     <a href="currrent.html" style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
       <a href="past.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">PAST ISSUE</p></a>
       </div>
       <div class="fourth-box">
@@ -223,8 +223,8 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content2" id="myDropdown2">
-            <a href="#">CURRET ISSUE</a>
-            <a href="#">PAST ISSUE</a>
+            <a href="current.html">CURRET ISSUE</a>
+            <a href="past.html">PAST ISSUE</a>
  
           </div>
           </div> 
@@ -243,11 +243,11 @@
  For Authors</h1>
 </div>
 <div class="box3">
-<a href="#"><p class="box3-para">Call for Paper</p></a>
+<a href="call.html"><p class="box3-para">Call for Paper</p></a>
 <a href="process.html"><p class="box3-para">Publication Process</p></a>
 <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
 <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-<a href="#"><p class="box3-para">Paper Format</p></a>
+<a href="sample.html"><p class="box3-para">Paper Format</p></a>
 
 <a href="track1.html"><p class="box3-para">Track paper</p></a>
 <a href="indexing.html"><p class="box3-para">Indexing</p></a>
@@ -260,8 +260,8 @@
 Publication</h1>
 </div>
   <div class="box4">
-<a href="#"><p class="box3-para">Current issue</p></a>
-<a href="#"><p class="box3-para">past issue</p></a>
+<a href="current.html"><p class="box3-para">Current issue</p></a>
+<a href="past.html"><p class="box3-para">past issue</p></a>
 
  
 </div>
