--- a/ethics.html
+++ b/ethics.html
@@ -43,8 +43,8 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="mob-dropdown-container">
-        <a href="#">CURRENT ISSUE</a>
-        <a href="#">PAST ISSUE</a>
+        <a href="current.html">CURRENT ISSUE</a>
+        <a href="past.html">PAST ISSUE</a>
       </div>
       
       <a href="contact.html">CONTACT</a>
@@ -59,7 +59,7 @@
 <!--header-->
 <div class="mob-intro-head">
 <img src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1723743619/IJEMSS-point-1_lltgft.png" class="mob-logo">
-<h1 class="mob-intro-head-title">INTERNATIONAL JOURNAL OF ENGINEERING <br>MANAGEMENT AND SOCIAL SCIENCE</h1>
+<h1 class="mob-intro-head-title">INTERNATIONAL JOURNAL OF ENGINEERING <br>MANAGEMENT AND SOCIAL SCIENCES</h1>
 <p class="mob-intro-head-para">(An International Multi-Disciplinary Journal)</p>
 <p class="mob-h1">ISSN:123-456-789</p>
 <p class="mob-h2">www.web-name.com</p>
@@ -189,7 +189,7 @@ Editors have a responsibility to act when they suspect misconduct or receive all
     <a href="process.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">Publication Process</p></a>
     <a href="submit.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">Submit Paper Online</p></a>
     <a href="fee.html" style="text-decoration:none; color:black;"> <p class="mob-box3-para">Pay Publication Fee</p></a>
-    <a href="pdf.html" style="text-decoration:none; color:black;"> <p class="mob-box3-para">Paper Format</p></a>
+    <a href="sample.html" style="text-decoration:none; color:black;"> <p class="mob-box3-para">Paper Format</p></a>
 
    <a href="track1.html" style="text-decoration:none; color:black;"> <p class="mob-box3-para">Track paper</p></a>
     <a href="indexing.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">Indexing</p></a>
@@ -271,7 +271,7 @@ if (dropdownContent.style.display === "block") {
           <img src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1723743619/IJEMSS-point-1_lltgft.png" class="img-logo">
           </div>
           <div>
-          <h1 class="header-heading">INTERNATIONAL JOURNAL OF ENGINEERING MANAGEMENT <br>AND SOCIAL SCIENCE</h1>
+          <h1 class="header-heading">INTERNATIONAL JOURNAL OF ENGINEERING MANAGEMENT <br>AND SOCIAL SCIENCES</h1>
           <p class="header-para"> (An International Multi-Disciplinary Journal)</p>
           </div>
           <div style="margin-left: 85px;">
@@ -318,8 +318,8 @@ if (dropdownContent.style.display === "block") {
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content2" id="myDropdown2">
-              <a href="#">CURRET ISSUE</a>
-              <a href="#">PAST ISSUE</a>
+              <a href="current.html">CURREnT ISSUE</a>
+              <a href="past.html">PAST ISSUE</a>
    
             </div>
             </div> 
@@ -339,11 +339,11 @@ if (dropdownContent.style.display === "block") {
    For Authors</h1>
   </div>
   <div class="box3">
-  <a href="#"><p class="box3-para">Call for Paper</p></a>
+  <a href="call.html"><p class="box3-para">Call for Paper</p></a>
   <a href="process.html"><p class="box3-para">Publication Process</p></a>
   <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
   <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-  <a href="#"><p class="box3-para">Paper Format</p></a>
+  <a href="sample.html"><p class="box3-para">Paper Format</p></a>
   
   <a href="track1.html"><p class="box3-para">Track paper</p></a>
   <a href="indexing.html"><p class="box3-para">Indexing</p></a>
