--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@ if (dropdownContent.style.display === "block") {
  For Authors</h1>
 </div>
 <div class="box3">
-  <a href="#"><p class="box3-para">Call for Paper</p></a>
+  <a href="call.html"><p class="box3-para">Call for Paper</p></a>
   <a href="process.html"><p class="box3-para">Publication Process</p></a>
     <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
       <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-        <a href="#"><p class="box3-para">Paper Format</p></a>
+        <a href="sample.html"><p class="box3-para">Paper Format</p></a>
 
           <a href="track1.html"><p class="box3-para">Track paper</p></a>
             <a href="indexing.html"><p class="box3-para">Indexing</p></a>
