--- a/indexing.html
+++ b/indexing.html
@@ -44,8 +44,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="mob-dropdown-container">
-          <a href="#">CURRENT ISSUE</a>
-          <a href="#">PAST ISSUE</a>
+          <a href="current.html">CURRENT ISSUE</a>
+          <a href="past.html">PAST ISSUE</a>
         </div>
         
         <a href="contact.html">CONTACT</a>
@@ -221,8 +221,8 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content2" id="myDropdown2">
-              <a href="#">CURRET ISSUE</a>
-              <a href="#">PAST ISSUE</a>
+              <a href="current.html">CURRENT ISSUE</a>
+              <a href="past.html">PAST ISSUE</a>
    
             </div>
             </div> 
@@ -244,9 +244,9 @@
   <div class="box3">
   <a href="call.html"><p class="box3-para">Call for Paper</p></a>
   <a href="process.html"><p class="box3-para">Publication Process</p></a>
-  <a href="#"><p class="box3-para">Submit Paper Online</p></a>
+  <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
   <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-  <a href="#"><p class="box3-para">Paper Format</p></a>
+  <a href="sample.html"><p class="box3-para">Paper Format</p></a>
   
   <a href="track1.html"><p class="box3-para">Track paper</p></a>
   <a href="index.html"><p class="box3-para">Indexing</p></a>
