--- a/process.html
+++ b/process.html
@@ -273,11 +273,11 @@
  For Authors</h1>
 </div>
 <div class="box3">
-<a href="#"><p class="box3-para">Call for Paper</p></a>
+<a href="call.html"><p class="box3-para">Call for Paper</p></a>
 <a href="process.html"><p class="box3-para">Publication Process</p></a>
 <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
 <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-<a href="#"><p class="box3-para">Paper Format</p></a>
+<a href="sample.html"><p class="box3-para">Paper Format</p></a>
 
 <a href="track1.html"><p class="box3-para">Track paper</p></a>
 <a href="indexing.html"><p class="box3-para">Indexing</p></a>
@@ -290,8 +290,8 @@
 Publication</h1>
 </div>
   <div class="box4">
-<a href="#"><p class="box3-para">Current issue</p></a>
-<a href="#"><p class="box3-para">past issue</p></a>
+<a href="current.html"><p class="box3-para">Current issue</p></a>
+<a href="past.html"><p class="box3-para">past issue</p></a>
 
  
 </div>
