--- a/sample.html
+++ b/sample.html
@@ -13,7 +13,7 @@
     <div class="mob-sidenav">
         <button onclick="w3_close()" class="mob-into" > &times;</button>
 
-    <a href="intro.html">HOME</a>
+    <a href="index.html">HOME</a>
     <button class="mob-dropdown-btn">ABOUT<span style="color: white; padding-left: 30px;"> ↓</span> 
       <i class="fa fa-caret-down"></i>
     </button>
@@ -98,7 +98,7 @@
     <h1 class="mob-fourth-box-head">PUBLICATIONS</h1>
     </div>
     <div class="third-box">
-   <a href="#" style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
+   <a href="current.html" style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
     <a href="past.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">PAST ISSUE</p></a>
     </div>
     <div class="fourth-box">
@@ -182,7 +182,7 @@ if (dropdownContent.style.display === "block") {
     <!--navbar-->
     <div class="navbar1">
       <div class="navbar">
-        <a href="intro.html" style="padding-left: 100px;">Home</a>
+        <a href="index.html" style="padding-left: 100px;">Home</a>
     
         <div class="dropdown"style="padding-left: 20px;" >
         <button class="dropbtn" onclick="myFunction()" style="padding-left: 100px;">about
@@ -218,8 +218,8 @@ if (dropdownContent.style.display === "block") {
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content2" id="myDropdown2">
-              <a href="#">CURRET ISSUE</a>
-              <a href="#">PAST ISSUE</a>
+              <a href="current.html">CURRET ISSUE</a>
+              <a href="past.html">PAST ISSUE</a>
    
             </div>
             </div> 
@@ -239,14 +239,14 @@ if (dropdownContent.style.display === "block") {
  For Authors</h1>
 </div>
 <div class="box3">
-  <a href="#"><p class="box3-para">Call for Paper</p></a>
+  <a href="call.html"><p class="box3-para">Call for Paper</p></a>
   <a href="process.html"><p class="box3-para">Publication Process</p></a>
     <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
       <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-        <a href="#"><p class="box3-para">Paper Format</p></a>
+        <a href="sample.html"><p class="box3-para">Paper Format</p></a>
 
           <a href="track1.html"><p class="box3-para">Track paper</p></a>
-            <a href="index.html"><p class="box3-para">Indexing</p></a>
+            <a href="indexing.html"><p class="box3-para">Indexing</p></a>
 
 </div>
 
@@ -266,7 +266,7 @@ Publication</h1>
      For reviewers</h1>
 </div>
   <div class="box4">
-    <a href="#"><p class="box3-para">Editorial Board</p></a>
+    <a href="board.css"><p class="box3-para">Editorial Board</p></a>
       <a href="#"><p class="box3-para">Join as reviewer</p></a>
 
 </div>
