--- a/topic.html
+++ b/topic.html
@@ -44,8 +44,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="mob-dropdown-container">
-          <a href="#">CURRENT ISSUE</a>
-          <a href="#">PAST ISSUE</a>
+          <a href="current.html">CURRENT ISSUE</a>
+          <a href="past.html">PAST ISSUE</a>
         </div>
         
         <a href="contact.html">CONTACT</a>
@@ -60,7 +60,7 @@
   <!--header-->
   <div class="mob-intro-head">
   <img src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1723743619/IJEMSS-point-1_lltgft.png" class="mob-logo">
-  <h1 class="mob-intro-head-title">INTERNATIONAL JOURNAL OF ENGINEERING <br>MANAGEMENT AND SOCIAL SCIENCE</h1>
+  <h1 class="mob-intro-head-title">INTERNATIONAL JOURNAL OF ENGINEERING <br>MANAGEMENT AND SOCIAL SCIENCES</h1>
   <p class="mob-intro-head-para">(An International Multi-Disciplinary Journal)</p>
   <p class="mob-h1">ISSN</p>
   <p class="mob-h2">www.irjmets.com</p>
@@ -287,7 +287,7 @@ Textile Engineering
             <img src="https://res.cloudinary.com/dsnqf3s0s/image/upload/v1723743619/IJEMSS-point-1_lltgft.png" class="img-logo">
         </div>
         <div>
-        <h1 class="header-heading">INTERNATIONAL JOURNAL OF ENGINEERING MANAGEMENT AND <br>SOCIAL SCIENCE</h1>
+        <h1 class="header-heading">INTERNATIONAL JOURNAL OF ENGINEERING MANAGEMENT AND <br>SOCIAL SCIENCES</h1>
         <p class="header-para"> (An International Multi-Disciplinary Journal)</p>
         </div>
         <div style="margin-left: 85px;">
@@ -358,7 +358,7 @@ Textile Engineering
   <a href="process.html"><p class="box3-para">Publication Process</p></a>
   <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
   <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-  <a href="#"><p class="box3-para">Paper Format</p></a>
+  <a href="sample.html"><p class="box3-para">Paper Format</p></a>
   
   <a href="track.html"><p class="box3-para">Track paper</p></a>
   <a href="indexing.html"><p class="box3-para">Indexing</p></a>
