--- a/track1.html
+++ b/track1.html
@@ -229,8 +229,8 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content2" id="myDropdown2">
-              <a href="#">CURRET ISSUE</a>
-              <a href="#">PAST ISSUE</a>
+              <a href="current.html">CURRET ISSUE</a>
+              <a href="past.html">PAST ISSUE</a>
    
             </div>
             </div> 
@@ -253,7 +253,7 @@
   <a href="process.html"><p class="box3-para">Publication Process</p></a>
   <a href="submit.html"><p class="box3-para">Submit Paper Online</p></a>
   <a href="fee.html"><p class="box3-para">Pay Publication Fee</p></a>
-  <a href="#"><p class="box3-para">Paper Format</p></a>
+  <a href="samle"><p class="box3-para">Paper Format</p></a>
   
   <a href="track.html"><p class="box3-para">Track paper</p></a>
   <a href="indexing.html"><p class="box3-para">Indexing</p></a>
@@ -265,8 +265,8 @@
 Publication</h1>
 </div>
   <div class="box4">
-<a href="#"><p class="box3-para">Current issue</p></a>
-<a href="#"><p class="box3-para">past issue</p></a>
+<a href="current.html"><p class="box3-para">Current issue</p></a>
+<a href="past.html"><p class="box3-para">past issue</p></a>
 
  
 </div>
