--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
       <h1 class="mob-fourth-box-head">PUBLICATIONS</h1>
       </div>
       <div class="third-box">
-     <a href="currenthtml style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
+     <a href="current.html style="text-decoration:none; color:black;"> <p class="mob-box3-para">CURRENT ISSUE</p></a>
       <a href="past.html" style="text-decoration:none; color:black;"><p class="mob-box3-para">PAST ISSUE</p></a>
       </div>
       <div class="fourth-box">
