--- a/contact.html
+++ b/contact.html
@@ -264,7 +264,7 @@
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content2" id="myDropdown2">
-              <a href="currenthtml">CURRENT ISSUE</a>
+              <a href="current.html">CURRENT ISSUE</a>
               <a href="past.html">PAST ISSUE</a>
    
             </div>
