--- a/submit.html
+++ b/submit.html
@@ -75,7 +75,7 @@
   Submission Via E-Mail
  </div><br>
  <div class="mob-Email">
-  <a href="https://gray-deanna-22.tiiny.site" target="_blank">Send Email via Gmail</a>
+  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=karthikeyamanam00@gmail.com&su=Your+Subject&body=Your+Message" target="_blank" >Send Email via Gmail</a>
  </div>
  
   </div>
